# pinitd

./: .gitignore  Cargo.toml  README.md  build.sh  postinstall.sh
.github/workflows/: release_on_push.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/penumbraos/pinitd/: BootCompletedReceiver.kt  BootLoopProtection.kt  BootProtectionActivity.kt  Command.kt  DummyActivity.kt  FileWatcher.kt  LauncherActivity.kt  Logcat.kt  ManualLaunchActivity.kt  PropertyWatcher.kt  SettingWriter.kt
android/app/src/main/java/im/agg/pinit/: BootCompletedReceiver.kt  Settings.kt  SettingsContentProvider.kt
android/app/src/main/java/im/agg/pinitd/: BootCompletedReceiver.kt  Command.kt  Logcat.kt  (+3 more)
android/gradle/wrapper/: gradle-wrapper.properties
android/pinitddummy32/: build.gradle.kts
android/pinitddummy32/src/main/: AndroidManifest.xml
android/pinitddummy32/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/pinitddummy32/src/main/resources/lib/armeabi-v7a/: wrap.sh
docs/: ExploitIssue.md
pinitd/: Cargo.toml
pinitd-cli/: Cargo.toml
pinitd-cli/src/: error.rs  main.rs
pinitd-common/: Cargo.toml
pinitd-common/src/: android.rs  bincode.rs  error.rs  lib.rs  protocol.rs  unit.rs  unit_config.rs
pinitd-common/src/protocol/: mod.rs  writable.rs
pinitd/src/: android.rs  controller.rs  error.rs  exploit.rs  file.rs  log.rs  main.rs  process.rs  registry.rs  socket.rs  state.rs  types.rs  unit.rs  unit_config.rs  unit_parsing.rs  worker.rs  worker_protocol.rs  wrapper.rs  zygote.rs
pinitd/src/controller/: mod.rs  pms.rs  worker.rs  worker_manager.rs  zygote.rs
pinitd/src/registry/: controller.rs  local.rs  mod.rs  spawn.rs
pinitd/src/worker/: connection.rs  mod.rs  process.rs  protocol.rs
src/: controller.rs  error.rs  main.rs  protocol.rs  worker.rs
(+6 files in other folders)
