[package]
name = "pinitd-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
tokio = { version = "1.44" }
uuid = { version = "1.17.0", features = ["serde"] }
thiserror = "2.0"
dependency-graph = "0.1.5"
