[package]
name = "pinitd"
version = "0.1.0"
edition = "2024"

[dependencies]
pinitd-common = { path = "../pinitd-common" }

# android_31317_exploit = { git = "https://github.com/agg23/android_31317_exploit_rs.git" }
android_31317_exploit = { path = "../../../cve/exploit" }

android_logger = "0.15.0" 
simple_logger = "5.0"
log-panics = "2.1"
log = "0.4"
thiserror = "2.0"
bincode = "2.0"
serde = "1.0"
serde_json = "1.0"

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7.15"
rust-ini = "0.21"
shlex = "1.3"
nix = "0.30"
