[package]
name = "pinitd"
version = "0.1.0"
edition = "2024"

[dependencies]
pinitd-common = { path = "../pinitd-common" }

android_31317_exploit = { git = "https://github.com/agg23/android_31317_exploit_rs.git" }
# android_31317_exploit = { path = "../../../cve/exploit" }

ai_pin_logger = { git = "https://github.com/PenumbraOS/ai_pin_logger-rs.git" }
simple_logger = "5.0"
log-panics = "2.1"
log = "0.4"
thiserror = "2.0"
bincode = "2.0"
serde = "1.0"
serde_json = "1.0"

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7.15"
rust-ini = "0.21"
shlex = "1.3"
nix = { version = "0.30", features = ["process"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
file-lock = "2.1.11"
dependency-graph = "0.1.5"
daemonize = "0.5.0"
